# title-protocol

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  network.json  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
crates/cli/: Cargo.toml
crates/cli/src/: anchor.rs  config.rs  error.rs  helpers.rs  main.rs  rpc.rs
crates/cli/src/commands/: create_tree.rs  init_global.rs  mod.rs  register_node.rs  remove_node.rs
crates/core/: Cargo.toml
crates/core/examples/: gen_fixture.rs  test_pixel.rs  test_verify.rs
crates/core/src/: jumbf.rs  lib.rs  tsa.rs
crates/core/tests/fixtures/certs/: ca.key  ca.srl  chain.pem  ed25519.pem  ed25519.pub  ee.key
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/crypto/src/attestation/: mod.rs  nitro.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  config.rs  error.rs  main.rs  onchain.rs  storage.rs
crates/gateway/src/endpoints/: health.rs  mod.rs  node_info.rs  sign.rs  sign_and_mint.rs  upload_url.rs  verify.rs
crates/gateway/src/storage/: irys.rs  local.rs  mod.rs  s3.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: handler.rs  main.rs  protocol.rs
crates/tee/: Cargo.toml
crates/tee/src/: config.rs  error.rs  main.rs  proxy_client.rs  security.rs  solana_tx.rs  wasm_loader.rs
crates/tee/src/blockchain/: mod.rs  solana_tx.rs
crates/tee/src/endpoints/: create_tree.rs  mod.rs  register_node.rs  sign.rs  test_helpers.rs  verify.rs
crates/tee/src/endpoints/sign/: handler.rs  mod.rs  tests.rs
crates/tee/src/endpoints/verify/: core.rs  extension.rs  handler.rs  mod.rs  tests.rs
crates/tee/src/infra/: gateway_auth.rs  mod.rs  proxy_client.rs  security.rs
crates/tee/src/runtime/: mock.rs  mod.rs  nitro.rs
crates/tee/src/wasm_loader/: file.rs  http.rs  mod.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/wasm-host/: Cargo.toml
crates/wasm-host/src/: c2pa_cert.rs  decode.rs  lib.rs  memory_pool.rs  resource_pool.rs
crates/wasm-host/tests/: phash_integration.rs
deploy/: docker-compose.production.yml  setup-ec2.sh
deploy/aws/: README.md  build-enclave.sh  docker-compose.production.yml  setup-ec2.sh
deploy/aws/docker/: entrypoint.sh  tee.Dockerfile
deploy/aws/terraform/: main.tf  outputs.tf  user-data.sh  variables.tf
deploy/local/: README.md  docker-compose.yml  setup.sh  teardown.sh
deploy/local/temp-storage/: Cargo.toml
deploy/local/temp-storage/src/: main.rs
deploy/terraform/: main.tf  outputs.tf  user-data.sh  variables.tf
docker/: README.md  gateway.Dockerfile  indexer.Dockerfile  irys-uploader.Dockerfile  proxy.Dockerfile  tee-mock.Dockerfile  tee.Dockerfile
docs/: COVERAGE.md  README.md  SOLANA_BUILD_NOTES.md  architecture.md  reference.md  troubleshooting.md
docs/tasks/: 01-mock-runtime.md  04-tee-verify.md  07-wasm-host-and-modules.md  08-ts-sdk.md  09-indexer.md
docs/v0.1.0/: COVERAGE.md  SPECS_JA.md
docs/v0.1.0/tasks/05-tee-sign/: README.md
docs/v0.1.0/tasks/10-security-hardening/: README.md
docs/v0.1.0/tasks/11-nitro-runtime/: README.md
docs/v0.1.0/tasks/14-hmac-content/: README.md
docs/v0.1.0/tasks/15-tsa-resolution/: README.md
docs/v0.1.0/tasks/16-collection-delegate/: README.md
docs/v0.1.0/tasks/19-nitro-test/: README.md  SESSION-2026-02-22.md
docs/v0.1.0/tasks/21-oss-legal/: README.md
docs/v0.1.0/tasks/22-tee-foundation/: README.md
docs/v0.1.0/tasks/26-deploy-vendor-split/: README.md
docs/v0.1.0/tasks/27-deploy-zero-base-fix/: README.md
docs/v0.1.0/tasks/29-globalconfig-devnet/: README.md  mainnet-guide.md
docs/v0.1.0/tasks/30-oss-release-readiness/: README.md
docs/v0.1.0/tasks/31-audit-core/: README.md
docs/v0.1.0/tasks/32-audit-types/: README.md
docs/v0.1.0/tasks/33-audit-crypto/: README.md
docs/v0.1.0/tasks/34-audit-wasm-host/: README.md
docs/v0.1.0/tasks/35-audit-tee/: README.md
docs/v0.1.0/tasks/38-audit-wasm-modules/: README.md
docs/v0.1.0/tasks/40-audit-sdk-ts/: README.md
docs/v0.1.0/tasks/41-audit-indexer/: README.md
docs/v0.1.0/tasks/42-audit-scripts/: README.md
docs/v0.1.0/tasks/43-audit-deploy-aws/: README.md
docs/v0.1.1/: COVERAGE.md  SPECS_JA.md
docs/v1/: GLOBALCONFIG-GUIDE.md  SPECS_JA.md
experiments/: package-lock.json  package.json  register-photo.ts
indexer/: .npmignore  README.md  package.json  tsconfig.json
indexer/src/: das.ts  index.ts  poller.ts  webhook.ts
indexer/src/__tests__/: indexer.test.ts
indexer/src/db/: client.ts  schema.ts
integration-tests/: package-lock.json  register-photo.ts  stress-test.ts
programs/title-config/: Anchor.toml  Cargo.toml  README.md
programs/title-config/src/: lib.rs
prototype/: nitro_enclave_test_keypair.pem
prototype/enclave-c2pa/: Cargo.toml  Dockerfile  meaturement.txt  plan.md
prototype/enclave-c2pa/enclave/: Cargo.toml
prototype/enclave-c2pa/enclave/src/: main.rs
prototype/enclave-c2pa/parent/: Cargo.toml
prototype/enclave-c2pa/proxy/: Cargo.toml
prototype/enclave-c2pa/wasm-brightness/: Cargo.toml
prototype/hello-enclave/: Cargo.toml  Dockerfile  hello-enclave-measurements.txt
prototype/hello-enclave/src/: main.rs
scripts/: README.md  build-enclave.sh  init-config.mjs  init-devnet.mjs  package-lock.json  package.json  register-content.mjs  setup-local.sh  test-devnet.mjs
sdk/ts/: README.md  package.json  tsconfig.json
sdk/ts/src/: chain.ts  client.ts  crypto.ts  discover.ts  index.ts  register.ts  resolve.ts  storage.ts  types.ts
services/irys-uploader/: index.js  package.json
tests/e2e/: package.json  tsconfig.json
tests/e2e/fixtures/: tee-info.json
tests/e2e/src/: e2e.test.ts  helpers.ts
tests/fixtures/certs/: ca.crt  ee.crt  ee.csr
wasm/c2pa-license-v1/: Cargo.toml
wasm/c2pa-license-v1/src/: lib.rs
wasm/c2pa-training-v1/: Cargo.toml
wasm/c2pa-training-v1/src/: lib.rs
wasm/hardware-google/: Cargo.toml
wasm/hardware-google/src/: lib.rs
wasm/phash-v1/: Cargo.toml
wasm/phash-v1/src/: lib.rs
(+44 files in other folders)
