[workspace]
members = [
    "crates/types",
    "crates/crypto",
    "crates/core",
    "crates/wasm-host",
    "crates/tee",
    "crates/gateway",
    "crates/proxy",
]
exclude = [
    "prototype",
    "wasm",
    "programs",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
base64 = "0.22"
base58 = "0.2"
c2pa = "0.75"
wasmtime = "29"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
solana-sdk = "2"
bincode = "1"
mpl-bubblegum = "2.1"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
hex = "0.4"
coset = "0.3"
ciborium = "0.2"
p384 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["der", "verifying"] }
x509-cert = { version = "0.2", features = ["std"] }
der = { version = "0.7", features = ["std", "alloc"] }
serde_bytes = "0.11"
async-trait = "0.1"

[profile.release]
overflow-checks = true
