[package]
name = "title-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Title Protocol Core: C2PA verification and provenance graph construction"

[dependencies]
title-types = { path = "../types" }
title-crypto = { path = "../crypto" }
c2pa = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
