[package]
name = "title-crypto"
version = "0.1.0"
edition = "2021"
description = "Title Protocol 暗号処理 (ECDH, AES-GCM, Ed25519, SHA-256)"

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
thiserror = { workspace = true }
