[package]
name = "title-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Title Protocol cryptographic primitives (ECDH, AES-GCM, Ed25519, SHA-256)"

[features]
default = ["vendor-aws"]
vendor-aws = []

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
coset = { workspace = true }
ciborium = { workspace = true }
p384 = { workspace = true }
ecdsa = { workspace = true }
x509-cert = { workspace = true }
der = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
