[package]
name = "title-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Title Protocol Gateway"

[features]
default = ["vendor-aws"]
vendor-aws = ["rust-s3"]

[dependencies]
title-types = { path = "../types" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
base58 = { workspace = true }
rust-s3 = { workspace = true, optional = true }
uuid = { workspace = true }
solana-sdk = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
title-crypto = { path = "../crypto" }
