[package]
name = "title-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Title Protocol vsock HTTPプロキシ"

[features]
default = ["vendor-aws"]
vendor-aws = ["vsock"]

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
axum = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = { version = "0.4", optional = true }
