[package]
name = "title-tee"
version = "0.1.0"
edition = "2021"
description = "Title Protocol TEEサーバー本体"

[dependencies]
title-types = { path = "../types" }
title-crypto = { path = "../crypto" }
title-core = { path = "../core" }
title-wasm-host = { path = "../wasm-host" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
base58 = { workspace = true }
rand = { workspace = true }
solana-sdk = { workspace = true }
bincode = { workspace = true }
mpl-bubblegum = { workspace = true }

serde_bytes = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aws-nitro-enclaves-nsm-api = "0.4"

[dev-dependencies]
c2pa = { workspace = true }
wat = "1"
