[package]
name = "title-wasm-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Title Protocol WASM実行環境 (wasmtime直接使用)"

[dependencies]
wasmtime = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }

[dev-dependencies]
wat = "1"
