[package]
name = "title-wasm-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Title Protocol WASM execution engine (wasmtime)"

[dependencies]
wasmtime = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
image = { workspace = true }
ciborium = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
ecdsa = { workspace = true }
x509-cert = { workspace = true }
der = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
wat = "1"
c2pa = { workspace = true }
serde_json = { workspace = true }
