[package]
name = "title-config"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/title-protocol/title-protocol"
authors = ["Title Protocol Contributors"]
description = "Title Protocol Anchor Solanaプログラム"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
# cargo-build-sbfの古いCargoがedition2024クレートを処理できないためピン留め
constant_time_eq = ">=0.1, <0.4"

[profile.release]
overflow-checks = true
