[package]
name = "c2pa-training-v1"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/title-protocol/title-protocol"
authors = ["Title Protocol Contributors"]
description = "Title Protocol Extension: AI学習許諾フラグ抽出"

[lib]
crate-type = ["cdylib"]

[dependencies]
dlmalloc = { version = "0.2", features = ["global"] }
