[package]
name = "hardware-google"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/title-protocol/title-protocol"
authors = ["Title Protocol Contributors"]
description = "Title Protocol Extension: Google Pixel ハードウェア署名検証"

[lib]
crate-type = ["cdylib"]

[dependencies]
dlmalloc = { version = "0.2", features = ["global"] }
