[package]
name = "title-temp-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Title Protocol Local Temporary Storage Server"

[[bin]]
name = "title-temp-storage"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
