# enclave/Cargo.toml
[package]
name = "enclave-app"
version = "0.1.0"
edition = "2021"

[dependencies]
vsock = "0.4"
c2pa = "0.75"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
wasmtime = "29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"